Changed transformation process for ORDER in privacy-preserving mode